Fixed spacing, added a logo for WBB and Spongebob hero

--- a/pages/haikyu/assets/css/style.css
+++ b/pages/haikyu/assets/css/style.css
@@ -49,8 +49,9 @@ a:hover {
 .navbar .menu {
     list-style: none;
     display: flex;
-    margin: 0;
+    margin-left: 5px
     padding: 0;
+
 }
 
 .navbar .menu_list {
@@ -166,4 +167,123 @@ a:hover {
     line-height: 1.6;
     max-width: 800px;
     margin: 0 auto;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .hero .h1 {
+        font-size: 2em;
+    }
+
+    .hero .bg-black h2 {
+        font-size: 1.8em;
+    }
+
+    .hero .bg-black h4 {
+        font-size: 1em;
+    }
+
+    .section h1 {
+        font-size: 1.8em;
+    }
+}
+
+@media (max-width: 992px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar .menu {
+        flex-direction: column;
+    }
+
+    .navbar .menu_list {
+        margin-bottom: 1em;
+    }
+
+    .hero .h1 {
+        font-size: 1.8em;
+    }
+
+    .hero .bg-black h2 {
+        font-size: 1.5em;
+    }
+
+    .hero .bg-black h4 {
+        font-size: 0.9em;
+    }
+
+    .section h1 {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar .logo img {
+        height: 40px;
+    }
+
+    .navbar .menu_list .btn {
+        padding: 0.5em 0.8em;
+    }
+
+    .navbar .btn-contact {
+        padding: 0.5em 0.8em;
+    }
+
+    .hero .main-title {
+        width: 90%;
+        padding: 0 1em;
+    }
+
+    .hero .h1 {
+        font-size: 1.5em;
+    }
+
+    .hero .bg-black h2 {
+        font-size: 1.3em;
+    }
+
+    .hero .bg-black h4 {
+        font-size: 0.8em;
+    }
+
+    .section h1 {
+        font-size: 1.3em;
+    }
+
+    .section p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 576px) {
+    .navbar .menu_list {
+        margin-bottom: 0.5em;
+    }
+
+    .hero .h1 {
+        font-size: 1.2em;
+    }
+
+    .hero .bg-black h2 {
+        font-size: 1em;
+    }
+
+    .hero .bg-black h4 {
+        font-size: 0.7em;
+    }
+
+    .section {
+        padding: 1em;
+    }
+
+    .section h1 {
+        font-size: 1.2em;
+    }
+
+    .section p {
+        font-size: 0.9em;
+    }
 }
