--- a/pages/spongebob/assets/css/style.css
+++ b/pages/spongebob/assets/css/style.css
@@ -12,11 +12,15 @@ body {
 .header {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem;
     background-color: #fbc02d; /* SpongeBob yellow */
     border-bottom: 3px solid #f57c00; /* SpongeBob orange */
+}
+
+.header .logo {
+    height: 50px;   
 }
 
 .header nav {
