--- a/pages/yuji-itadori/css/style.css
+++ b/pages/yuji-itadori/css/style.css
@@ -16,7 +16,7 @@ body {
     gap: 1rem;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
-    width: 100%;
+    width: calc(100% - 2rem);
     z-index: 1000;
 }
 
@@ -34,6 +34,7 @@ body {
     color: #fff;
     transition: all 0.2s ease;
     position: relative;
+    margin-right: 5px;
 }
 
 .header .btn.active {
